@@ -1,6 +1,6 @@
 /*
  * Copyright 2013-2014 SmartBear Software
- * Copyright 2014-2015 The TestFX Contributors
+ * Copyright 2014-2023 The TestFX Contributors
  *
  * Licensed under the EUPL, Version 1.1 or - as soon they will be approved by the
  * European Commission - subsequent versions of the EUPL (the "Licence"); You may
@@ -14,27 +14,148 @@
  * CONDITIONS OF ANY KIND, either express or implied. See the Licence for the
  * specific language governing permissions and limitations under the Licence.
  */
+apply plugin: 'java-library'
 
-ext.pomDescription = "TestFX JUnit5"
+ext.pomDescription = 'TestFX JUnit5'
+ext.moduleName = 'org.testfx.junit5'
+ext.openjfxVersion = '11'
 
-buildscript {
-    repositories {
-        mavenCentral()
+static def getOSName() {
+    final String osName = System.getProperty("os.name").toLowerCase()
+    if (osName.contains("linux")) {
+        return ("linux")
+    } else if (osName.contains("mac os x") || osName.contains("darwin") || osName.contains("osx")) {
+        return ("mac")
+    } else if (osName.contains("windows")) {
+        return ("win")
     }
-    dependencies {
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M3'
-    }
+    return ""
 }
 
-apply plugin: 'org.junit.platform.gradle.plugin'
+ext.platform = getOSName()
 
-dependencies {
-    compile project(":testfx-core")
+repositories {
+    jcenter()
+}
 
-    providedCompile 'org.junit.jupiter:junit-jupiter-api:5.0.0-M3'
+afterEvaluate {
+    dependencies {
+        if (JavaVersion.current().isJava10Compatible()) {
+            // In case we are on an Oracle JDK with JavaFX builtin, these will be ignored.
+            implementation "org.openjfx:javafx-base:${openjfxVersion}:${platform}"
+            implementation "org.openjfx:javafx-graphics:${openjfxVersion}:${platform}"
+            implementation "org.openjfx:javafx-controls:${openjfxVersion}:${platform}"
+            implementation "org.openjfx:javafx-swing:${openjfxVersion}:${platform}"
+            implementation "org.openjfx:javafx-fxml:${openjfxVersion}:${platform}"
+        }
 
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.0.0-M3'
+        compile project(":testfx-core")
 
-    testCompile "org.hamcrest:hamcrest-library:1.3"
-    testCompile "org.testfx:openjfx-monocle:1.8.0_20"
+        compileOnly 'org.junit.jupiter:junit-jupiter-api:5.5.1'
+        testCompileOnly 'org.junit.jupiter:junit-jupiter-api:5.5.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
+        implementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
+        testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
+        implementation "org.assertj:assertj-core:3.13.2"
+        //testImplementation "org.assertj:assertj-core:3.13.2"
+        testImplementation 'org.awaitility:awaitility:4.0.2'
+
+        if (JavaVersion.current().isJava12Compatible()) {
+            testCompile 'org.testfx:openjfx-monocle:jdk-12.0.1+2'
+        } else if (JavaVersion.current().isJava11Compatible()) {
+            testCompile "org.testfx:openjfx-monocle:jdk-11+26"
+        } else if (JavaVersion.current().isJava10Compatible() &&
+                System.getProperty("java.vm.name").toLowerCase().contains("openjdk")) {
+            testCompile "org.testfx:openjfx-monocle:jdk-11+26"
+        } else if (JavaVersion.current().isJava9Compatible()) {
+            testCompile "org.testfx:openjfx-monocle:jdk-9+181"
+        } else {
+            testCompile "org.testfx:openjfx-monocle:8u76-b04"
+        }
+    }
+
+    configurations {
+        apiElements {
+            sourceCompatibility = JavaVersion.VERSION_1_8
+            targetCompatibility = JavaVersion.VERSION_1_8
+        }
+    }
+
+    if (JavaVersion.current().isJava9Compatible()) {
+        task compileModuleInfoJava(type: JavaCompile) {
+            dependsOn 'compileJava'
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', compileJava.classpath.asPath,
+                ]
+            }
+            options.encoding = 'UTF-8'
+            classpath = files()
+            source = sourceSets.main.allJava
+            sourceCompatibility = JavaVersion.VERSION_1_9
+            targetCompatibility = JavaVersion.VERSION_1_9
+            destinationDir = compileJava.destinationDir
+        }
+        classes.dependsOn compileModuleInfoJava
+        def dependents = configurations.api.dependencies + configurations.implementation.dependencies
+        def dependentProjects = dependents.findAll { it instanceof ProjectDependency }
+        dependentProjects.each { dependency ->
+            compileModuleInfoJava.dependsOn ":${dependency.name}:compileModuleInfoJava"
+        }
+    }
+
+    javadoc {
+        source = sourceSets.main.allJava
+        //dependsOn compileModuleInfoJava
+        if (JavaVersion.current().isJava9Compatible()) {
+            options.addBooleanOption('html5', true)
+
+            inputs.property("moduleName", moduleName)
+
+            doFirst {
+                options.addStringOption('-module-path', classpath.asPath)
+                options.addMultilineStringsOption('-add-modules').setValue([
+                        'javafx.graphics', 'javafx.controls', 'javafx.swing', 'org.hamcrest', 'org.testfx'])
+                options.addMultilineStringsOption('-add-exports').setValue([
+                        'javafx.graphics/com.sun.javafx.application=org.testfx',
+                        'javafx.graphics/com.sun.glass.ui=org.testfx'])
+            }
+        }
+    }
+
+    compileTestJava {
+        if (JavaVersion.current().isJava9Compatible()) {
+            sourceCompatibility = JavaVersion.VERSION_1_9
+            targetCompatibility = JavaVersion.VERSION_1_9
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', classpath.asPath,
+                        '--add-modules', 'org.junit.jupiter.api',
+                        '--add-modules', 'org.hamcrest',
+                        '--add-modules', 'org.assertj.core',
+                        '--add-reads', "$moduleName=org.junit.jupiter.api",
+                        '--add-reads', "$moduleName=javafx.controls",
+                        '--add-reads', "$moduleName=org.hamcrest",
+                        '--add-reads', "$moduleName=org.assertj.core",
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+                ]
+                classpath = files()
+            }
+        }
+    }
+
+    test {
+        useJUnitPlatform()
+    }
+
+    jar {
+        inputs.property("moduleName", moduleName)
+
+        manifest {
+            attributes(
+                    'Implementation-Title': moduleName,
+            )
+        }
+    }
 }
